--- a/react-app/src/pages/AboutPage.css
+++ b/react-app/src/pages/AboutPage.css
@@ -1,7 +1,7 @@
 .image {
   /* background-image: url("https://www.suitandtie.lk/wp-content/uploads/2019/11/73009820_2451558234913282_6027530092157075456_n-e1572859680649.jpg"); */
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("https://www.suitandtie.lk/wp-content/uploads/2019/11/73009820_2451558234913282_6027530092157075456_n-e1572859680649.jpg");
+    url("https://i.imgur.com/k175MzC.jpg");
   background-position: center center;
   background-size: cover;
   padding: 95px 20px 50px 20px;
@@ -38,7 +38,6 @@
 }
 
 .image2 {
-  /* background: url("https://www.suitandtie.lk/wp-content/uploads/elementor/thumbs/about-q91q6vyy1rfkyqfrjsd1yxeiw099pmvp2wfpmv3kq4.jpg"); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
